--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 h1, h2, h3, h4, p, li{
     font-family: sans-serif;
+    color: #444;
+}
+
+h1, h2, h3{
+    color: #1098ad;
 }
 
 h1{
@@ -54,4 +59,14 @@ article header p{
 
 .related{
     list-style: none;
+}
+
+.main-header{
+    background-color: #f7f7f7;
+}
+
+aside{
+    background-color: #f7f7f7;
+    border-top: 5px solid #1098ad;
+    border-bottom: 5px solid #1098ad;
 }
