--- a/styles.css
+++ b/styles.css
@@ -86,3 +86,19 @@ li:first-child{
 li:nth-child(2){
     color: crimson;
 } */
+
+a:link, a:visited{
+    color: #1098ad;
+    text-decoration: none;
+}
+
+a:hover{
+    color: orangered;
+    font-weight: bold;
+    text-decoration: underline dotted;
+}
+
+a:active{
+    background-color: black;
+    font-style: italic;
+}
