--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
-h1, h2, h3, h4, p, li{
+body{
     font-family: sans-serif;
     color: #444;
+    border-top: 10px solid #1098ad;
 }
 
 h1, h2, h3{
@@ -101,4 +102,12 @@ a:hover{
 a:active{
     background-color: black;
     font-style: italic;
+}
+
+/* nav a:link{
+    font-size: 18px;
+} */
+
+nav {
+    font-size: 18px;
 }
