--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,30 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
     font-family: sans-serif;
     color: #444;
     border-top: 10px solid #1098ad;
+}
+
+nav {
+    font-size: 18px;
+}
+
+article{
+    margin-bottom: 60px;
+}
+
+.main-header{
+    background-color: #f7f7f7;
+    padding: 20px 40px;
+    margin-bottom: 60px;
+}
+
+.post-header{
+    margin-bottom: 40px;
 }
 
 h1, h2, h3{
@@ -16,10 +39,13 @@ h1{
 
 h2{
     font-size: 40px;
+    margin-bottom: 30px;
 }
 
 h3{
     font-size: 30px;
+    margin-bottom: 20px;
+    margin-top: 40px;
 }
 
 h4{
@@ -30,10 +56,21 @@ h4{
 p{
     font-size: 22px;
     line-height: 1.5;
+    margin-bottom: 15px;
+}
+
+ul, ol{
+    margin-left: 50px;
+    margin-bottom: 20px;
 }
 
 li{
     font-size: 20px;
+    margin-bottom: 10px;
+}
+
+li:last-child{
+    margin-bottom: 0;
 }
 
 /* footer p{
@@ -62,14 +99,11 @@ article header p{
     list-style: none;
 }
 
-.main-header{
-    background-color: #f7f7f7;
-}
-
 aside{
     background-color: #f7f7f7;
     border-top: 5px solid #1098ad;
     border-bottom: 5px solid #1098ad;
+    padding: 50px 0;
 }
 
 /* .first-li{
@@ -108,6 +142,3 @@ a:active{
     font-size: 18px;
 } */
 
-nav {
-    font-size: 18px;
-}
