--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,11 @@ aside{
     width: 500px;
 }
 
+.container{
+    width: 700px;
+    margin: 0 auto;
+}
+
 .main-header{
     background-color: #f7f7f7;
     padding: 20px 40px;
@@ -83,14 +88,6 @@ li:last-child{
     margin-bottom: 0;
 }
 
-/* footer p{
-    font-size: 16px;
-}
-
-article header p{
-    font-style: italic;
-} */
-
 #author{
     font-style: italic;
     font-size: 18px;
@@ -109,21 +106,9 @@ article header p{
     list-style: none;
 }
 
-/* .first-li{
-    font-weight: bold;
-} */
-
 li:first-child{
     font-weight: bold;
 }
-
-/* li:last-child{
-    font-style: italic;
-}
-
-li:nth-child(2){
-    color: crimson;
-} */
 
 a:link, a:visited{
     color: #1098ad;
@@ -140,10 +125,6 @@ a:active{
     background-color: black;
     font-style: italic;
 }
-
-/* nav a:link{
-    font-size: 18px;
-} */
 
 .post-img{
     width: 100%;
