--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body{
     font-family: sans-serif;
     color: #444;
     border-top: 10px solid #1098ad;
+    position: relative;
 }
 
 nav {
@@ -25,10 +26,11 @@ aside{
     width: 500px;
 }
 
-/* .container{
-    width: 700px;
+.container{
+    max-width: 900px;
     margin: 0 auto;
-} */
+    position: relative;
+}
 
 .main-header{
     background-color: #f7f7f7;
@@ -139,4 +141,13 @@ nav a:link{
 
 nav a:link:last-child{
     margin-right: 0;
+}
+
+button{
+    font-size: 22px;
+    padding: 20px;
+    cursor: pointer;
+    position: absolute;
+    bottom: 50px;
+    right: 50px;
 }
