--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,10 @@ aside{
 
 .main-header{
     background-color: #f7f7f7;
+    background-color: red;
     padding: 20px 40px;
     margin-bottom: 60px;
-    height: 80px;
+    /* height: 80px; */
 }
 
 .post-header{
@@ -177,4 +178,35 @@ h2::after{
     position: absolute;
     top: -10px;
     right: 20px;
+}
+
+/* ********** ( Floats ) ********** */
+
+.author-img{
+    float: left;
+    margin-bottom: 20px;
+}
+
+.author{
+    margin-top: 10px;
+    float: left;
+    margin-left: 20px;
+}
+
+h1{
+    float: left;
+}
+
+nav{
+    float: right;
+}
+
+/* .clear{
+    clear: both;
+} */
+
+.clearfix::after{
+    clear: both;
+    content: "";
+    display: block;
 }
