--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -22,8 +23,7 @@ aside{
     background-color: #f7f7f7;
     border-top: 5px solid #1098ad;
     border-bottom: 5px solid #1098ad;
-    padding: 50px 0;
-    width: 500px;
+    padding: 50px 40px;
 }
 
 .container{
@@ -69,6 +69,7 @@ h4{
     font-size: 20px;
     text-transform: uppercase;
     text-align: center;
+    margin-bottom: 30px;
 }
 
 p{
@@ -107,6 +108,7 @@ li:last-child{
 
 .related{
     list-style: none;
+    margin-left: 0;
 }
 
 li:first-child{
@@ -211,18 +213,15 @@ nav{
 }
 
 article{
-    background-color: lightblue;
     width: 825px;
     float: left;
 }
 
 aside{
-    background-color: lightpink;
     width: 300px;
     float: right;
 }
 
 footer{
-    background-color: lightgreen;
     clear: both;
 }
