--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,6 @@ a:active{
 
 nav a:link{
     margin-right: 30px;
-    margin-top: 10px;
     display: inline-block;
 }
 
@@ -183,7 +182,7 @@ h2::after{
 
 /* ********** ( Floats ) ********** */
 
-.author-img{
+/* .author-img{
     float: left;
     margin-bottom: 20px;
 }
@@ -202,9 +201,9 @@ nav{
     float: right;
 }
 
-/* .clear{
+.clear{
     clear: both;
-} */
+}
 
 .clearfix::after{
     clear: both;
@@ -224,4 +223,47 @@ aside{
 
 footer{
     clear: both;
+} */
+
+/* ************* flexbox ************* */
+
+.main-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.author-box{
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.author{
+    margin-bottom: 0;
+    margin-left: 15px;
+}
+
+.related-post{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 30px;
+}
+
+.related-link:link{
+    font-size: 17px;
+    font-weight: bold;
+    font-style: normal;
+
+    display: block;
+    margin-bottom: 5px;
+}
+
+.related-author{
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: italic;
+
 }
